@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.168 2003/04/12 13:55:31 vanzandt Exp $
+C RCS $Id: gnuplot.doc,v 1.169 2003/04/18 10:41:36 mikulik Exp $
 C 18 September 2001
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001   Thomas Williams, Colin Kelley et al.
 C
@@ -3237,13 +3237,16 @@ C ... and restart the table:
 2 reset
 ?commands reset
 ?reset
- The `reset` command causes all options that can be set with the `set`
- command to take on their default values.  The only exceptions are that the
- terminal set with `set term` and the output file set with `set output` are
- left unchanged.  This command is useful, e.g., to restore the default
- settings at the end of a command file, or to return to a defined state after
- lots of settings have been changed within a command file.  Please refer to
- the `set` command to see the default values that the various options take.
+ The `reset` command causes all graph-related options that can be set with the
+ `set` command to take on their default values.  This command is useful, e.g.,
+ to restore the default graph settings at the end of a command file, or to
+ return to a defined state after lots of settings have been changed within a
+ command file.  Please refer to the `set` command to see the default values
+ that the various options take.
+
+ The following `set` commands do not change the graph status and are thus left
+ unchanged: the terminal set with `set term`, the output file set with `set
+ output` and directory paths set with `set loadpath` and `set fontpath`.
 2 save
 ^ <a name="save set"></a>
 ?commands save
